objects/ResourceProject__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Effort_Hours__c</fullName>
        <label>Actual Effort (Hours)</label>
        <summarizedField>CRM_Project__c.Actual_Effort_Hours__c</summarizedField>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Development_Hours_Major__c</fullName>
        <defaultValue>5*8*12</defaultValue>
        <description>Adjusted for vacation &amp; holidays</description>
        <inlineHelpText>Adjusted for vacation &amp; holidays</inlineHelpText>
        <label>Available Development Hours (Major)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Development_Hours_Minor__c</fullName>
        <defaultValue>3*8*7</defaultValue>
        <description>Adjusted for Vacation &amp; Holidays</description>
        <label>Available Development Hours (Minor)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Hours__c</fullName>
        <formula>IF(
CONTAINS(Project_Name__c,"Minor"),
             (((10*No_of_Devs__c*6)-6)+((10*2.5*No_of_Admins__c)-2.5)),
             IF(
                 CONTAINS(Project_Name__c,"Major"),
                        (((8*No_of_Devs__c*6)-6)+((8*2.5*No_of_Admins__c)-2.5)),0         
             )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployed_Projects__c</fullName>
        <inlineHelpText># of projects with status 'Deployed'</inlineHelpText>
        <label># Deployed Projects</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployment_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment Initiated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Time_Dev__c</fullName>
        <description>This field is used to capture the exact deployment time to trigger the sandbox refresh alert for CRM team</description>
        <label>Deployment Time Dev</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Initiated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort_Hours__c</fullName>
        <label>Estimated Effort (Hours)</label>
        <summarizedField>CRM_Project__c.Estimated_Effort_Hours__c</summarizedField>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Admins__c</fullName>
        <label>No of Admins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Devs__c</fullName>
        <label>No of Devs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Projects__c</fullName>
        <description>Total no of open projects</description>
        <inlineHelpText># of projects with status 'Waiting for Response', 'On Hold', 'In Progress', 'Not Started', 'Requirement Complete'</inlineHelpText>
        <label># Open Projects</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Response, On Hold, In Progress, Not Started, Requirement Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_Requirements__c</fullName>
        <inlineHelpText># of projects where status is 'Pending Requirements'</inlineHelpText>
        <label># Pending Requirements</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Requirements</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Release Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_signoff_date__c</fullName>
        <label>QA signoff date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_testing_start_Date__c</fullName>
        <label>QA testing start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for UAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Emergency/Out of Cycle</fullName>
                </value>
                <value>
                    <fullName>Patch/Bug Fix</fullName>
                </value>
                <value>
                    <fullName>Non CRM team</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirements_Cut_Off_Date__c</fullName>
        <label>Requirements Cut Off Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SignOff_Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT Sign Off Reminder Sent ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Scripts_Creation_Start_Date__c</fullName>
        <formula>UAT_Start_Date__c-10</formula>
        <label>Test Scripts Creation Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UAT_Sign_Off_Date__c</fullName>
        <label>UAT Sign Off Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UAT_Sign_Off_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT Sign Off Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAT_Start_Date__c</fullName>
        <label>UAT Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>of_Projects_In_Progress__c</fullName>
        <label># of Projects (In Progress)</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Projects_Not_Started__c</fullName>
        <label># of Projects (Not Started)</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Projects_Ready_for_UAT__c</fullName>
        <label># of Projects (Ready for UAT)</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Ready For UAT</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Projects_Sign_Off_Received__c</fullName>
        <inlineHelpText># of projects with status 'UAT Sign Off Received'</inlineHelpText>
        <label># of Projects (Sign Off Received)</label>
        <summaryFilterItems>
            <field>CRM_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>UAT Sign Off Received</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_projects_total__c</fullName>
        <label># of Projects (Total)</label>
        <summaryForeignKey>CRM_Project__c.CRM_Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Requirements_Cut_Off_Date__c</columns>
        <columns>UAT_Start_Date__c</columns>
        <columns>UAT_Sign_Off_Date__c</columns>
        <columns>Deployment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>of_projects_total__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>Actual_Effort_Hours__c</columns>
        <columns>of_Projects_Sign_Off_Received__c</columns>
        <columns>Available_Development_Hours_Minor__c</columns>
        <columns>Available_Development_Hours_Major__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>startsWith</operation>
            <value>Informatica</value>
        </filters>
        <filters>
            <field>Requirements_Cut_Off_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>Informatica Release Calendar 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>CRM_Management_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRMReleases</fullName>
        <columns>NAME</columns>
        <columns>Deployment_Date__c</columns>
        <columns>QA_signoff_date__c</columns>
        <columns>QA_testing_start_Date__c</columns>
        <columns>Requirements_Cut_Off_Date__c</columns>
        <columns>UAT_Sign_Off_Date__c</columns>
        <columns>UAT_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CRM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Major</value>
        </filters>
        <label>CRM Releases 2019</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Releases</fullName>
        <columns>Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>Release_Type__c</columns>
        <columns>Deployment_Date__c</columns>
        <columns>Requirements_Cut_Off_Date__c</columns>
        <columns>UAT_Start_Date__c</columns>
        <columns>UAT_Sign_Off_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Major,Minor</value>
        </filters>
        <label>CRM Releases 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Informatica_Releases</fullName>
        <columns>Project_Name__c</columns>
        <columns>Requirements_Cut_Off_Date__c</columns>
        <columns>UAT_Start_Date__c</columns>
        <columns>UAT_Sign_Off_Date__c</columns>
        <columns>Deployment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>startsWith</operation>
            <value>Informatica</value>
        </filters>
        <label>Informatica Releases</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sales_Operations_T2</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Reporting</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Reporting</label>
        <language>en_US</language>
    </listViews>
</CustomObject>